Spring/Bank/src/main/java/com/example/demo/errors/CustomerExistsException.java
package com.example.demo.errors;

public class CustomerExistsException extends Exception {

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

}
